Clock in Inimplementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,5 +187,6 @@
     <string name="products_url">products/view.php</string>
     <string name="latitude">latitude</string>
     <string name="longitude">longitude</string>
+    <string name="clockInUrl">task/clockin.php</string>
 
 </resources>
