--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,5 +192,8 @@
     <string name="image_upload_url">task/image_uploader.php</string>
     <string name="video_upload_url">task/video_uploader.php</string>
     <string name="clockOutUrl">task/clock_out.php</string>
+    <string name="noLeave">No leave application available</string>
+    <string name="leave">Leave</string>
+    <string name="leave_view_requests_url">leave/view.php</string>
 
 </resources>
