Fixed inventory requests to allow both supervisor and nurse make requests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,5 +202,6 @@
     <string name="send">Send</string>
     <string name="enter_remittance_record">Enter Remittance Record</string>
     <string name="proof_image_uploader">work/proof_image_uploader.php</string>
+    <string name="user_id">user_id</string>
 
 </resources>
