--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,6 +190,7 @@
     <string name="alert_api">alert/add.php</string>
     <string name="submitting_report">Submitting report</string>
     <string name="image_upload_url">task/image_uploader.php</string>
+    <string name="audio_upload_url">task/audio_uploader.php</string>
     <string name="video_upload_url">task/video_uploader.php</string>
     <string name="clockOutUrl">task/clock_out.php</string>
     <string name="noLeave">No leave application available</string>
