1. Added audio playback 2. Stop audio playback 3. Added video buffering listener to video player 4. Fixed issue with app crashing when location could not be determined 5. Added picture loading text when picture is loading 6. Added picture onclick listener only when picture is fully loaded 7. Fixed issue with app crashing when taking picture 8. Made video upload first, then picture, the audio, the report

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,5 +215,7 @@
     <string name="edit_institution_url">institutions/update.php</string>
     <string name="delete_institution_url">institutions/delete.php</string>
     <string name="calling_activity">calling_activity</string>
+    <string name="videoUrl">videoUrl</string>
+    <string name="currentPosition">current position</string>
 
 </resources>
