changed navigation background

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,5 +220,7 @@
     <string name="taken_picture">taken_picture</string>
     <string name="report_images">report_images</string>
     <string name="images">Images</string>
+    <string name="approved">Approved</string>
+
 
 </resources>
